@startuml

title __TASK8A's Class Diagram__\n


      class com.example.task8a.HelloApplication {
          {static} + main()
          + start()
      }

  


      class com.example.task8a.HelloController {
          + SemesterComboBox : ComboBox<String>
          + context : TextField
          + eduFormComboBox2 : ComboBox<DataItem>
          + groupComboBox : ComboBox<DataItem>
          + name : TextField
          + statsLabel : Label
          + status : TextField
          + table : TableView
          + time : TextField
          ~ conn : Connection
          - fxlist : ObservableList<Plan>
          + deliteButton()
          + getStatistics()
          + initialize()
          + selectionEventHandler()
          + showAdminPanel()
          - createtable()
      }


  com.example.task8a.HelloApplication -up-|> javafx.application.Application
  com.example.task8a.HelloController .up.|> javafx.fxml.Initializable
  com.example.task8a.HelloController o-- DAO.TaskDAOImpl : impl
  com.example.task8a.HelloController o-- DAO.TaskDAO : taskDAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
